--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,19 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Paramètres
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list>
+    <ion-item>
+      <ion-label>Mon profil</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Mes clients</ion-label>
+    </ion-item>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  </ion-list>
 </ion-content>
