--- a/src/app/add-client/add-client.page.html
+++ b/src/app/add-client/add-client.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>add-client</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Ajouter un client</ion-title>
   </ion-toolbar>
 </ion-header>
 
