--- a/src/app/clients/clients.page.html
+++ b/src/app/clients/clients.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>clients</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Mes clients</ion-title>
   </ion-toolbar>
 </ion-header>
 
