--- a/src/app/profil/profil.page.html
+++ b/src/app/profil/profil.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>profil</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Mon profil</ion-title>
   </ion-toolbar>
 </ion-header>
 
