--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,5 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="primary">
     <ion-title>
       Paramètres
     </ion-title>
@@ -8,10 +8,10 @@
 
 <ion-content [fullscreen]="true">
   <ion-list>
-    <ion-item>
+    <ion-item routerLink="/profil">
       <ion-label>Mon profil</ion-label>
     </ion-item>
-    <ion-item>
+    <ion-item routerLink="/clients">
       <ion-label>Mes clients</ion-label>
     </ion-item>
 
