--- a/src/app/add-catalogue/add-catalogue.page.html
+++ b/src/app/add-catalogue/add-catalogue.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>add-catalogue</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Ajouter un modèle</ion-title>
   </ion-toolbar>
 </ion-header>
 
