--- a/src/app/add-commande/add-commande.page.html
+++ b/src/app/add-commande/add-commande.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>add-commande</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Ajouter une commande</ion-title>
   </ion-toolbar>
 </ion-header>
 
