--- a/src/app/clients/clients.page.html
+++ b/src/app/clients/clients.page.html
@@ -8,5 +8,18 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item *ngFor="let c of clients" [routerLink]="'/edit-client/'+c.id">
+      <ion-label>
+        <h2>{{c.nom}}</h2>
+        <h3>{{c.numero}}</h3>
+        <p>{{c.adresse}}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button routerLink="/add-client">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
