--- a/src/app/edit-client/edit-client.page.html
+++ b/src/app/edit-client/edit-client.page.html
@@ -8,6 +8,75 @@
 </ion-header>
 
 <ion-content>
-  <ion-label>{{cl.nom}}</ion-label>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>
+        {{cl.nom}}
+      </ion-card-title>
+      <ion-card-subtitle>{{cl.numero}}</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <p class="ion-text-center">{{cl.adresse}}</p>
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>
+        Mesures
+      </ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col class="bleu">
+            Longeur
+          </ion-col>
+          <ion-col class="bleu">
+            Epaule
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="bleu">
+            {{cl.longeur}}
+          </ion-col>
+          <ion-col class="bleu">
+            {{cl.epaule}}
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="bleu">
+            Longeur
+          </ion-col>
+          <ion-col class="bleu">
+            Epaule
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="bleu">
+            {{cl.longeur}}
+          </ion-col>
+          <ion-col class="bleu">
+            {{cl.epaule}}
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="bleu">
+            Longeur
+          </ion-col>
+          <ion-col class="bleu">
+            Epaule
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="bleu">
+            {{cl.longeur}}
+          </ion-col>
+          <ion-col class="bleu">
+            {{cl.epaule}}
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
