--- a/src/app/add-commande/add-commande.page.html
+++ b/src/app/add-commande/add-commande.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -8,5 +8,25 @@
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-label>Modèle</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-select interface="action-sheet" class="select-full-width">
+        <ion-select-option *ngFor="let m of models" [value]="m">{{m.nom + ' (' + m.prix+')'}}
+        </ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-label>Client</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-select interface="action-sheet" class="select-full-width">
+        <ion-select-option *ngFor="let c of clients" [value]="c">{{c.nom + ' (' + c.numero+')'}}
+        </ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
