--- a/src/app/add-commande/add-commande.page.html
+++ b/src/app/add-commande/add-commande.page.html
@@ -27,6 +27,12 @@
         </ion-select-option>
       </ion-select>
     </ion-item>
+    <ion-item>
+      <ion-label>Tarif</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-input type="number"></ion-input>
+    </ion-item>
   </ion-list>
 
 </ion-content>
