--- a/src/app/add-commande/add-commande.page.html
+++ b/src/app/add-commande/add-commande.page.html
@@ -34,5 +34,5 @@
       <ion-input type="number"></ion-input>
     </ion-item>
   </ion-list>
-
+  <ion-button expand="block" (click)="saveCommande()">Enregistrer</ion-button>
 </ion-content>
