--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,3 +1,9 @@
 ion-toolbar {
     --background: var(--ion-color-primary);
 }
+.homme{
+    background-color: rgb(22, 81, 190);
+}
+.femme{
+    background-color: rgb(238, 19, 216);
+}
